[package]
name = "psp22-full"
version = "0.3.0"
authors = [
    "Hans <michal.handzlik@cardinals.cc>",
    "Jasuwienas <mariusz.jasuwienas@blockydevs.com>",
    "Maciek Malik <poczta@maciekmalik.pl>",
    "BlockyDevs <contact@blockydevs.com>"
]
description = "Implementation of PSP22 token standard in pure ink!"
license-file = "LICENSE"
edition = "2021"
homepage = "https://github.com/Smart-Beaver"
repository = "https://github.com/Smart-Beaver/smart-contracts/tree/main/PSP22"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
contract = []
ink-as-dependency = []

[[test]]
name = "unit_tests"
path = "tests/unit.rs"