[package]
name = "psp22_wrapper_tests"
version = "0.3.0"
authors = [
    "Hans <michal.handzlik@cardinals.cc>",
    "Jasuwienas <mariusz.jasuwienas@blockydevs.com>",
    "Maciek Malik <poczta@maciekmalik.pl>",
    "BlockyDevs Team contact@blockydevs.com"
]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "4.3" }

[lib]
path = "src/lib.rs"

[features]
default = ["std", "contract"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
contract = []
ink-as-dependency = []

# @FIXME e2e tests break workspace build
e2e-tests = []

[[test]]
name = "unit_tests"
path = "tests/unit.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e.rs"
